--- a/pipelines/shared.release.ap-southeast-2.yml
+++ b/pipelines/shared.release.ap-southeast-2.yml
@@ -22,22 +22,10 @@ pr:
       - '*'
 
 stages:
-  - stage: preview
-    displayName: Preview
-    variables:
-      - group: terraform.platform.preview
-    jobs:
-      - template: pipelines/templates/plan-and-approve.yml@terraform-templates
-        parameters:
-          terraformVariablesFile: variables/shared.preview.ap-southeast-2.tfvars
-          terraformWorkspace: cloudwatch_shared_preview
-          environment: Preview
-
   - stage: production
     displayName: Production
-    dependsOn: preview
     variables:
-      - group: terraform.platform.production
+      - group: terraform.platform
     jobs:
       - template: pipelines/templates/plan-and-approve.yml@terraform-templates
         parameters:
